# pi-zero-pytorch

./: README.md  example_of_loading_pretrained_PaliGemma_weights_into_piZero.py  plot_time_from_beta.py  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
experiments/: load_PaliGemma_weights_output.txt
pi_zero_pytorch/: __init__.py  pi_zero.py
pi_zero_pytorch/experiments/: load_PaliGemma_weights.py
tests/: test_pi_zero.py
