[project]
name = "pi-zero-pytorch"
version = "0.0.15"
description = "π0 in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'flow policy',
    'robotic foundation model',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "beartype",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "jaxtyping",
    "rotary-embedding-torch>=0.8.5",
    "torch>=2.5",
    'torchdiffeq',
    "tqdm"
]

[project.urls]
Homepage = "https://pypi.org/project/pi-zero-pytorch/"
Repository = "https://github.com/lucidrains/pi-zero-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest",
    "vit-pytorch>=1.8.7"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pi_zero_pytorch"]
